add expand funcionality
